bonus/confs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlezcano-playground
  namespace: dev
  labels:
    app: playground
    owner: mlezcano
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
        owner: mlezcano
    spec:
      containers:
      - name: mlezcano-playground
        image: mikelezc/playground:v1 # Para cambiar la versión ponemos este número en 1 o en 2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: mlezcano-playground
  namespace: dev
  labels:
    app: playground
    owner: mlezcano
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 8888
    nodePort: 30080
  selector:
    app: playground
